--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,9 +4,17 @@
         <item>@string/pref_units_entry_meters</item>
         <item>@string/pref_units_entry_feet</item>
     </string-array>
-
     <string-array name="pref_units_values">
         <item>@string/pref_units_value_meters</item>
         <item>@string/pref_units_value_feet</item>
+    </string-array>
+
+    <string-array name="pref_data_entries">
+        <item>@string/pref_data_entry_percent</item>
+        <item>@string/pref_data_entry_total</item>
+    </string-array>
+    <string-array name="pref_data_values">
+        <item>@string/pref_data_value_percent</item>
+        <item>@string/pref_data_value_total</item>
     </string-array>
 </resources>
