--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -10,6 +10,15 @@
         android:defaultValue="@string/pref_units_default"
         android:summary="%s" />
 
+    <ListPreference
+        android:key="@string/pref_data_key"
+        android:title="@string/pref_data_title"
+        android:dialogTitle="@string/pref_data_title"
+        android:entries="@array/pref_data_entries"
+        android:entryValues="@array/pref_data_values"
+        android:defaultValue="@string/pref_data_default"
+        android:summary="%s" />
+
     <EditTextPreference
         android:key="@string/pref_samples_key"
         android:title="@string/pref_samples_title"
