--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -31,9 +31,9 @@
         android:textSize="30sp" />
 
     <TextView
+        android:id="@+id/tv_results_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/total_gradient_change"
         android:textSize="18sp" />
 
     <TextView
@@ -44,19 +44,7 @@
         android:padding="8dp"
         android:textSize="30sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/total_elevation_change"
-        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tv_total_elevation_change"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:padding="8dp"
-        android:textSize="30sp" />
 
 
 </LinearLayout>
